<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/navigationBar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="false"
                    android:background="#009688"
                    app:menu="@menu/bottom_menu" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="267dp"
                    android:layout_margin="5dp"
                    android:src="@mipmap/category2"
                    android:contentDescription="@string/about_to_purchuse"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_item_count"
                        android:layout_weight="10"
                        android:textSize="20sp"
                        android:id="@+id/counterFoods"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incrememnt_item_order"
                        android:layout_weight="1"
                        android:id="@+id/orderItemDecremement"
                        android:background="#009688"
                        android:textColor="#ffffff"
                        android:layout_marginRight="5dp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decrement_item_count"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:id="@+id/orderItemIncremement"
                        android:background="#009688"
                        android:layout_marginRight="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliver_location_tag"
                        android:layout_weight="1"
                        android:textSize="18sp"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_hint"
                        android:layout_weight="1"
                        />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_bill_tag"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/base_price_price"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/base_price"
                        android:layout_weight="1"
                        android:id="@+id/basePrice"
                        android:layout_marginBottom="10dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliver_tip_tag"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliver_tip"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price_tag"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price"
                        android:id="@+id/totalPrice"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        />

                </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_delivery_tag"
                    android:layout_weight="3"
                    android:textColor="#009688"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_order"
                    android:layout_weight="3"
                    android:textColor="#009688"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchurse_tag"
                    android:padding="5dp"
                    android:background="#009688"
                    android:layout_margin="5dp"
                    android:textColor="#ffffff"
                    android:onClick="paymenthandler"/>




            </LinearLayout>

        </ScrollView>
    </LinearLayout>








</LinearLayout>