<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditFoodActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="false"
        android:background="#009688"
        app:menu="@menu/admin_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/edit_food_item"
                android:textAlignment="center"
                android:textSize="36sp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:text="@string/item_name"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:text="@string/item_price"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:text="@string/item_description"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="3"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnSubmitChanges"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/saveChanges_btn"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>